	Forbidden page added
v 1.2.3
	Added installation instructions.
	Config files consolidated
	Proper license information added
	Tables given "family_" prefix
	image.php made w3c(HTML 4.01) compliant
	people.php made w3c(HTML 4.01) compliant (also fixes bug#000001 - html format on weddings)
	Index.php made w3c(HTML 4.01) compliant
	Meta tags added to index.php.
v 1.2.0
	Index page rearranged to allow login form
	Support added to passthru.php for login and logout
	Login form added
	Links removed to restricted people.
	Restrictions added to edit, people, image & passthru based on session and person age
	Added session.inc.php
	css.inc.php changed to use favicon
	favicon added to CVS
v 1.1.2
	Edit.php changed to use list_enums()
	Edit.php changed to use listpeeps()
	Edit.php cleaned up to limit input length on all fields
v 1.1.1
	Version control added