@@ -16,6 +16,9 @@
 	//along with this program; if not, write to the Free Software
 	//Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
+	// send the headers
+	ini_set("arg_separator.output", "&amp;");
+	ini_set('session.use_trans_sid', false);
 	// include the configuration parameters and functions
 	include "inc/config.inc.php";
 	include "inc/functions.inc.php";
