@@ -1,3 +1,5 @@
+	session.use_trans_id set to false to help spiders
+	Table prefix made ammendable (dafault "family")
 	Forbidden page added
 v 1.2.3
 	Added installation instructions.
